--- a/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
@@ -27,7 +27,7 @@
     user: "{{ stroom_user }}"
     minute: "*"
     hour: "*"
-    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_app_home_dir }}/certs/server.pem.crt --cacert {{ stroom_app_home_dir }}/certs/ca.pem.crt --delete-after-sending--file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_app_home_dir }}/logs/app/ STROOM_APP-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
+    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_app_home_dir }}/certs/server.pem.crt --cacert {{ stroom_app_home_dir }}/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_app_home_dir }}/logs/app/ STROOM_APP-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
   tags:
     - deploy
     - configure
@@ -39,7 +39,7 @@
     user: "{{ stroom_user }}"
     minute: "*"
     hour: "*"
-    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_app_home_dir }}/certs/server.pem.crt --cacert {{ stroom_app_home_dir }}/certs/ca.pem.crt --delete-after-sending--file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_app_home_dir }}/logs/access/ STROOM_ACCESS-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
+    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_app_home_dir }}/certs/server.pem.crt --cacert {{ stroom_app_home_dir }}/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_app_home_dir }}/logs/access/ STROOM_ACCESS-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
   tags:
     - deploy
     - configure
@@ -51,7 +51,7 @@
     user: "{{ stroom_user }}"
     minute: "*"
     hour: "*"
-    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_app_home_dir }}/certs/server.pem.crt --cacert {{ stroom_app_home_dir }}/certs/ca.pem.crt --delete-after-sending--file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_app_home_dir }}/logs/user/ STROOM_USER-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
+    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_app_home_dir }}/certs/server.pem.crt --cacert {{ stroom_app_home_dir }}/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_app_home_dir }}/logs/user/ STROOM_USER-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
   tags:
     - deploy
     - configure
