--- a/stroom/roles/non_docker_proxy/update_config/tasks/main.yml
+++ b/stroom/roles/non_docker_proxy/update_config/tasks/main.yml
@@ -12,11 +12,10 @@
   copy:
     src: "{{ local_config_dir }}/certs"
     dest: "{{ stroom_proxy_install_root_dir }}/stroom-proxy/"
-    local_follow: no
-    follow: yes
   tags:
     - deploy
     - configure
+    - certs
     
 - name: "Check if {{ stroom_proxy_config_files_and_templates_dir }} exists on the Ansible controller"
   local_action: stat path={{ stroom_proxy_config_files_and_templates_dir }}
