--- a/stroom/install_mixed_cluster.yml
+++ b/stroom/install_mixed_cluster.yml
@@ -22,9 +22,16 @@
   tasks:
 
     - import_role:
+        name: stack/deploy_v6
+      tags:
+        - deploy
+      when: stack_version == ("^v6\.")         # When Stroom v6.x
+
+    - import_role:
         name: stack/deploy
       tags:
         - deploy
+      when: stack_version != ("^v6\.")         # When NOT Stroom v6.x, i.e. Stroom v7
 
 ########### stroom HOSTS  ###########
 
