--- a/stroom/install_stack_cluster.yml
+++ b/stroom/install_stack_cluster.yml
@@ -12,7 +12,6 @@
   tags:
     - setup
 
-
 ########### stroom_and_proxy_stack HOSTS  ###########
 
 - name: "Deploy stroom_and_proxy stack"
@@ -22,10 +21,16 @@
   tasks:
 
     - import_role:
+        name: stack/deploy_v6
+      tags:
+        - deploy
+      when: stack_version == ("^v6\.")         # When Stroom v6.x
+
+    - import_role:
         name: stack/deploy
       tags:
         - deploy
-
+      when: stack_version != ("^v6\.")         # When NOT Stroom v6.x, i.e. Stroom v7
 
 ########### stroom_services_stack HOSTS  ###########
 
@@ -36,10 +41,16 @@
   tasks:
 
     - import_role:
+        name: stack/deploy_v6
+      tags:
+        - deploy
+      when: stack_version == ("^v6\.")         # When Stroom v6.x
+
+    - import_role:
         name: stack/deploy
       tags:
         - deploy
-
+      when: stack_version != ("^v6\.")         # When NOT Stroom v6.x, i.e. Stroom v7
 
 ########### stroom_dbs_stack HOSTS  ###########
 
