.gitignore tidy up.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ venv/
 .vagrant
 
 config/multi_node_mixed_cluster/example_inventory/test_inventory.yml
-
 config/single_node_stroom_core_stack/example_inventory/test_inventory.yml
-
 config/remote_proxy/example_inventory/test_inventory.yml
+*/test_inventory.yml
