--- a/stroom/roles/stack/download_v6/tasks/main.yml
+++ b/stroom/roles/stack/download_v6/tasks/main.yml
@@ -39,7 +39,7 @@
 
     # It is debatable whether we should download to local then push to remotes or just
     # let the remotes each download it as we do here.
-    - name: Download stack
+    - name: " Download stack ( {{ stack_version }} )"
       get_url:
         url: "{{ _stroom_stack_archive_url }}"
         dest: "{{ downloads_dir }}/"
@@ -81,6 +81,8 @@
         - never # TODO this doesn't seem to be working
         - delete_download
 
+  check_mode: no  # Task will be done in check_mode to ensure subsequent tasks
+                  # complete sucessfully in check mode
     # --END OF BLOCK--
 
   # Relying on the archive having been downloaded above
