--- a/stroom/roles/non_docker_proxy/systemd/tasks/main.yml
+++ b/stroom/roles/non_docker_proxy/systemd/tasks/main.yml
@@ -4,31 +4,30 @@
   assert:
     that:
       - stroom_user is defined
-      - stack_name is defined
-      - stack_version is defined
-      - stack_install_root_dir is defined
+      - stroom_proxy_version is defined
+      - stroom_proxy_home_dir is defined
       - stroom_service_on_boot is defined
       - stroom_service_state is defined
 
 - name: SystemD Service File
   become: true
-  vars:
-    stroom_version:  "{{ stack_version }}"
-    stroom_install_root_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{ stack_version }}"
+#  vars:
+#    stroom_proxy_version:  "{{ stroom_proxy_version }}"
+#    stroom_proxy_home_dir: "{{ stroom_proxy_home_dir }}"
   template:
-    src: "templates/etc/systemd/system/stroom.service.j2"
-    dest: "/etc/systemd/system/stroom.service"
+    src: "templates/etc/systemd/system/stroom-proxy.service.j2"
+    dest: "/etc/systemd/system/stroom-proxy.service"
 
 - name: SystemD Service enable
   when: stroom_service_on_boot is defined
   become: true
   systemd:
-    name: stroom
+    name: stroom-proxy
     enabled: "{{ stroom_service_on_boot }}"
 
 - name: SystemD Service start
   when: stroom_service_state is defined
   become: true
   systemd:
-    name: stroom
+    name: stroom-proxy
     state: "{{ stroom_service_state }}"
