--- a/stroom/roles/non_docker_stroom/systemd/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/systemd/tasks/main.yml
@@ -4,17 +4,16 @@
   assert:
     that:
       - stroom_user is defined
-      - stack_name is defined
-      - stack_version is defined
-      - stack_install_root_dir is defined
+      - stroom_version is defined
+      - stroom_home_dir is defined
       - stroom_service_on_boot is defined
       - stroom_service_state is defined
 
 - name: SystemD Service File
   become: true
-  vars:
-    stroom_version:  "{{ stack_version }}"
-    stroom_install_root_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{ stack_version }}"
+#  vars:
+#    stroom_version:  "{{ stroom_version }}"
+#    stroom_home_dir: "{{ stroom_home_dir }}"
   template:
     src: "templates/etc/systemd/system/stroom.service.j2"
     dest: "/etc/systemd/system/stroom.service"
