--- a/stroom/roles/stack/systemd/tasks/main.yml
+++ b/stroom/roles/stack/systemd/tasks/main.yml
@@ -12,23 +12,26 @@
 
 - name: SystemD Service File
   become: true
+  become_user: root
   vars:
     stroom_version:  "{{ stack_version }}"
     stroom_install_root_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{ stack_version }}"
   template:
-    src: "templates/etc/systemd/system/stroom.service.j2"
-    dest: "/etc/systemd/system/stroom.service"
+    src: "templates/etc/systemd/system/stroom-stack.service.j2"
+    dest: "/etc/systemd/system/stroom-stack.service"
 
 - name: SystemD Service enable
   when: stroom_service_on_boot is defined
   become: true
+  become_user: root
   systemd:
-    name: stroom
+    name: stroom-stack
     enabled: "{{ stroom_service_on_boot }}"
 
 - name: SystemD Service start
   when: stroom_service_state is defined
   become: true
+  become_user: root
   systemd:
-    name: stroom
+    name: stroom-stack
     state: "{{ stroom_service_state }}"
