--- a/stroom/roles/setup/java/vars/main.yml
+++ b/stroom/roles/setup/java/vars/main.yml
@@ -41,12 +41,17 @@ _java:
     url: "{{ java_16_alt_url | default('https://download.java.net/java/GA/jdk16.0.2/d4a915d82b4c4fbb9bde534da945d746/7/GPL/openjdk-16.0.2_linux-x64_bin.tar.gz') }}"
     directory: "jdk-16.0.2"
     home_dir: "{{ java_unarchive_dest }}/jdk-16.0.2"
+  17:
+    targz: "openjdk-17.0.2_linux-x64_bin.tar.gz"
+    url: "{{ java_17_alt_url | default('https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-x64_bin.tar.gz') }}"
+    directory: "jdk-17.0.2"
+    home_dir: "{{ java_unarchive_dest }}/jdk-17.0.2"
 
 # Java 6,7,8,11 stuff
 java_yum_package: "{{ _java[java_version | int].jre | default([]) }}"
 java_jdk_yum_package: "{{ _java[java_version | int].jdk | default([]) }}"
 
-# Java 12,13,14,15,16 stuff
+# Java 12,13,14,15,16,17 stuff
 java_archive_filename: "{{ _java[java_version | int].tar.gz | default([]) }}"
 java_archive_url: "{{ _java[java_version | int].url | default([]) }}"
 java_archive_directory: "{{ _java[java_version | int].directory | default([]) }}"
