--- a/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
@@ -25,7 +25,7 @@
     state: present
     minute: "*"
     hour: "*"
-    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_install_root_dir }}/stroom/certs/server.pem.crt --key {{ stroom_install_root_dir }}/stroom/certs/server.unencrypted.key --cacert {{ stroom_install_root_dir }}/stroom/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_install_root_dir }}/stroom/logs/app/ STROOM-APP-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
+    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_install_root_dir }}/stroom/certs/server.pem.crt --key {{ stroom_install_root_dir }}/stroom/certs/server.unencrypted.key --cacert {{ stroom_install_root_dir }}/stroom/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_install_root_dir }}/stroom/logs/app/ STROOM-APP-EVENTS https://{{nginx_advertised_host}}/stroom/datafeeddirect >/dev/null 2>&1"
   tags:
     - deploy
     - configure
@@ -36,7 +36,7 @@
     state: present
     minute: "*"
     hour: "*"
-    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_install_root_dir }}/stroom/certs/server.pem.crt --key {{ stroom_install_root_dir }}/stroom/certs/server.unencrypted.key --cacert {{ stroom_install_root_dir }}/stroom/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_install_root_dir }}/stroom/logs/access/ STROOM-ACCESS-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
+    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_install_root_dir }}/stroom/certs/server.pem.crt --key {{ stroom_install_root_dir }}/stroom/certs/server.unencrypted.key --cacert {{ stroom_install_root_dir }}/stroom/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_install_root_dir }}/stroom/logs/access/ STROOM-ACCESS-EVENTS https://{{nginx_advertised_host}}/stroom/datafeeddirect >/dev/null 2>&1"
   tags:
     - deploy
     - configure
@@ -47,7 +47,7 @@
     state: present
     minute: "*"
     hour: "*"
-    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_install_root_dir }}/stroom/certs/server.pem.crt --key {{ stroom_install_root_dir }}/stroom/certs/server.unencrypted.key --cacert {{ stroom_install_root_dir }}/stroom/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_install_root_dir }}/stroom/logs/user/ STROOM-USER-EVENTS https://{{hostvars[groups['stroom_services_stack'][0]]['public_ip_address']}}/stroom/datafeeddirect >/dev/null 2>&1"
+    job: "{{ stroom_home_dir }}/bin/send_to_stroom.sh --cert {{ stroom_install_root_dir }}/stroom/certs/server.pem.crt --key {{ stroom_install_root_dir }}/stroom/certs/server.unencrypted.key --cacert {{ stroom_install_root_dir }}/stroom/certs/ca.pem.crt --delete-after-sending --file-regex '.*[a-z]+-[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}\\.log' --system STROOM --environment \"{{ environment_name }}\" {{ stroom_install_root_dir }}/stroom/logs/user/ STROOM-USER-EVENTS https://{{nginx_advertised_host}}/stroom/datafeeddirect >/dev/null 2>&1"
   tags:
     - deploy
     - configure
