Add task to create initial admin users

--- a/stroom/roles/non_docker_stroom/deploy/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/deploy/tasks/main.yml
@@ -24,7 +24,9 @@
   tags:
     - deploy
 
-- name: 'Create admin user'
-  when: stroom_initial_admin_user is defined
+- name: 'Create Stroom admin users'
+  when: stroom_initial_admin_users is defined
+  changed_when: false # Revisit when Stroom CLI provides INFO on stdout (GH Issue 3263 refers)
+  loop: "{{ stroom_initial_admin_users }}"
   run_once: true
-  command: "{{ java_info[java_version].java_home_dir }}/bin/java -jar {{ stroom_home_dir }}/bin/stroom-app-all.jar manage_users --createUser {{ stroom_initial_admin_user }} --createGroup Administrators --addToGroup {{ stroom_initial_admin_user }} Administrators --grantPermission Administrators Administrator {{ stroom_home_dir }}/config/config.yml"
+  command: "{{ java_info[java_version].java_home_dir }}/bin/java -jar {{ stroom_home_dir }}/bin/stroom-app-all.jar manage_users --createUser {{ item }} --createGroup Administrators --addToGroup {{ item }} Administrators --grantPermission Administrators Administrator {{ stroom_home_dir }}/config/config.yml"
