--- a/stroom/roles/setup/java/vars/main.yml
+++ b/stroom/roles/setup/java/vars/main.yml
@@ -42,8 +42,8 @@ _java:
     directory: "jdk-16.0.2"
     home_dir: "{{ java_unarchive_dest }}/jdk-16.0.2"
   17:
-    targz: "jdk-17.0.6_linux-aarch64_bin.tar.gz"
-    url: "{{ java_17_alt_url | default('https://download.oracle.com/java/17/archive/jdk-17.0.6_linux-aarch64_bin.tar.gz') }}"
+    targz: "jdk-17.0.6_linux-x64_bin.tar.gz"
+    url: "{{ java_17_alt_url | default('https://download.oracle.com/java/17/archive/jdk-17.0.6_linux-x64_bin.tar.gz') }}"
     directory: "jdk-17.0.6"
     home_dir: "{{ java_unarchive_dest }}/jdk-17.0.6"
 
