--- a/stroom/setup_mysql.yml
+++ b/stroom/setup_mysql.yml
@@ -10,10 +10,10 @@
   roles:
     - roles/setup/mysql
 
-- name: Open port for MySQL
-  become: true
-  firewalld:
-    port: "{{ mysql_port }}/tcp"
-    zone: public
-    permanent: true
-    state: enabled
+# - name: Open port for MySQL
+#   become: true
+#   firewalld:
+#     port: "{{ mysql_port }}/tcp"
+#     zone: public
+#     permanent: true
+#     state: enabled
