--- a/stroom/setup_stroom_hosts.yml
+++ b/stroom/setup_stroom_hosts.yml
@@ -42,19 +42,19 @@
     #   notify:
     #     - Restart docker
         
-    - name: Opening mySQL stack TCP port to public zone in firewalld
-      firewalld:
-        port: "{{ item }}/tcp"
-        zone: public
-        permanent: true
-        immediate: true
-        state: enabled
-      loop:
-        - "{{ stroom_all_dbs_port | default(3307) }}"
-      notify:
-        - Restart docker
-      when: 
-        - mixed_cluster == 'false' or   mixed_cluster is not defined      # is false or not defined
+    # - name: Opening mySQL stack TCP port to public zone in firewalld
+    #   firewalld:
+    #     port: "{{ item }}/tcp"
+    #     zone: public
+    #     permanent: true
+    #     immediate: true
+    #     state: enabled
+    #   loop:
+    #     - "{{ stroom_all_dbs_port | default(3307) }}"
+    #   notify:
+    #     - Restart docker
+    #   when: 
+    #     - mixed_cluster == 'false' or   mixed_cluster is not defined      # is false or not defined
 
     # - name: Opening mySQL cluster Stroom DB TCP port to public zone in firewalld
     #   firewalld:
