--- a/stroom/roles/setup/common/tasks/main.yml
+++ b/stroom/roles/setup/common/tasks/main.yml
@@ -41,7 +41,6 @@
       - bind-utils # for nslookup
       - coreutils  # realpath is used by some stroom scripts
       - curl
-      # - firewalld.noarch # Needed as CentOS on AWS does not include firewall
       - git # Needed for migration testing, but useful to have
       - htop # Useful process monitoring
       - httpie  # Used by some stroom scripts
@@ -51,12 +50,23 @@
       - unzip
       - vim  # vi is not a mustard cutter
 
-# - name: Ensure firewalld is running
-#   become: true
-#   service: 
-#     name: firewalld 
-#     state: started 
-#     enabled: true
+- name: YUM install various command line tools
+  when: no_firewalld is undefined
+  become: true
+  yum:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
+      - firewalld.noarch # Needed as CentOS on AWS does not include firewall
+
+- name: Ensure firewalld is running
+  when: no_firewalld is undefined
+  become: true
+  service: 
+    name: firewalld 
+    state: started 
+    enabled: true
 
 - name: "Ensure we have user {{ stroom_user }} for running stroom software"
   become: true
