--- a/stroom/roles/non_docker_stroom/systemd/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/systemd/tasks/main.yml
@@ -20,7 +20,7 @@
     src: "templates/etc/systemd/system/stroom.service.j2"
     dest: "/etc/systemd/system/stroom.service"
   notify:
-    - Stop Old Stroom Service
+    - Stop Stroom Service
     - Reload systemd Daemon
 
 # Force the old service to stop prior to starting the new one
