--- a/stroom/roles/non_docker_stroom/systemd/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/systemd/tasks/main.yml
@@ -31,6 +31,7 @@
   when: stroom_service_on_boot is defined
   become: true
   become_user: root
+  register: stroom_service_installed
   systemd:
     name: stroom
     enabled: "{{ stroom_service_on_boot }}"
